# arachne_filesystem

./: CMakeLists.txt  README.md  TODO.txt
include/: FileManager.h  FileStats.h  UI.h  UI_dialog.h
src/: FileManager.cpp  FileStats.cpp  UI.cpp  UI_dialog.cpp  main.cpp
